fix: header z-index 적용

--- a/src/components/layouts/header/header-client.module.css
+++ b/src/components/layouts/header/header-client.module.css
@@ -9,6 +9,7 @@
   justify-content: space-between;
   align-items: center;
   transition: background-color 0.5s ease;
+  z-index: 1000;
 }
 
 .containerDark {
